changed python size vector computation to SIMD